examples/admin-quickstart/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nucleus-admin
  labels:
    name: nucleus-admin
